# ndk-gif

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/gif/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GifFrame.cpp  GifFrame.h  JavaInputSream.cpp  JavaInputSream.h  log.h
app/src/main/java/com/wind/ndk/gif/: GifDrawable.java  GifFrame.java  MainActivity.java
app/src/main/jni/: com_wind_ndk_gif_GifFrame.cpp  com_wind_ndk_gif_GifFrame.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wind/ndk/gif/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
